--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,34 @@
 {% extends "base.html" %}
+{% block title %}{% endblock %}
+{% block content %}
+<div class="container">
+  <form method="POST">
+    {{ form.hidden_tag() }}
+      <div class="mb-3">
+        {{ form.email.label(class="form-label") }}
+        {% if form.email.errors %}
+          {{ form.email(class="form-control is-invalid") }}
+          {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.email(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.password.label(class="form-label") }}
+        {% if form.password.errors %}
+          {{ form.password(class="form-control is-invalid") }}
+          {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.password(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mt-4">
+        {{ form.submit(class='btn btn-light text-dark btn-primary') }}
+      </div>
+    </form>
+  </div>
+{% endblock %}
