--- a/templates/register.html
+++ b/templates/register.html
@@ -1,80 +1,56 @@
 {% extends "base.html" %}
 {% block title %}{% endblock %}
 {% block content %}
-
-<div class="container w-50">
-        <form method="POST" action="">
-            {{form.hidden_tag()}}
-    <fieldset>
-        <legend class="border-bottom mb-4"> Please create an account </legend>
-
-        <div class="form-group">
-            {{form.customer_name.label(class="form-control-label")}}
-            {%if form.customer_name.errors%}
-                {{form.customer_name(class="form-control form-control-1g is-invalid")}}
-                    {%for error in form.customer_name.errors%}
-                        <span>{{error}}</span>
-                    {%endfor%}
-                    {% else %}
-                        {{form.customer_name(class="form-control form-control-1g")}}
-            {%endif%}
-        </div>
-
-        <div class="form-group">
-            {{form.user_name.label(class="form-control-label")}}
-            {%if form.user_name.errors%}
-                {{form.user_name(class="form-control form-control-1g is-invalid")}}
-                    {%for error in form.user_name.errors%}
-                        <span>{{error}}</span>
-                    {%endfor%}
-                    {% else %}
-                        {{form.user_name(class="form-control form-control-1g")}}
-            {%endif%}
-        </div>
-
-        <div class="form-group">
-            {{form.customer_email.label(class="form-control-label")}}
-            {%if form.customer_email.errors%}
-                {{form.customer_email(class="form-control form-control-1g is-invalid")}}
-                    {%for error in form.customer_email.errors%}
-                        <span>{{error}}</span>
-                    {%endfor%}
-                    {% else %}
-                        {{form.customer_email(class="form-control form-control-1g")}}
-            {%endif%}
-        </div>
-
-        <div class="form-group">
-            {{form.password.label(class="form-control-label")}}
-            {%if form.password.errors%}
-                {{form.password(class="form-control form-control-1g is-invalid")}}
-                    {%for error in form.password.errors%}
-                        <span>{{error}}</span>
-                    {%endfor%}
-                    {% else %}
-                        {{form.password(class="form-control form-control-1g")}}
-            {%endif%}
-        </div>
-
-        <div class="form-group">
-            {{form.confirm_password.label(class="form-control-label")}}
-            {%if form.confirm_password.errors%}
-                {{form.confirm_password(class="form-control form-control-1g is-invalid")}}
-                    {%for error in form.confirm_password.errors%}
-                        <span>{{error}}</span>
-                    {%endfor%}
-                    {% else %}
-                        {{form.confirm_password(class="form-control form-control-1g")}}
-            {%endif%}
-        </div>
-
-
-    </fieldset>
-
-
-<div class="field-group mt-4">
-    {{form.submit(class='btn btn-lg btn-light text-dark btn-primary')}}
-</div>
-        </form>
-</div>
+<div class="container">
+  <form method="POST">
+    {{ form.hidden_tag() }}
+      <div class="mb-3">
+        {{ form.name.label(class="form-label") }}
+        {% if form.name.errors %}
+          {{ form.name(class="form-control is-invalid") }}
+          {% for error in form.name.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.name(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.email.label(class="form-label") }}
+        {% if form.email.errors %}
+          {{ form.email(class="form-control is-invalid") }}
+          {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.email(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.password.label(class="form-label") }}
+        {% if form.password.errors %}
+          {{ form.password(class="form-control is-invalid") }}
+          {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.password(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="form-group">
+        {{ form.confirm_password.label(class="form-label") }}
+        {% if form.confirm_password.errors %}
+          {{ form.confirm_password(class="form-control is-invalid") }}
+          {% for error in form.confirm_password.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.confirm_password(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mt-4">
+        {{ form.submit(class='btn btn-light text-dark btn-primary') }}
+      </div>
+    </form>
+  </div>
 {% endblock %}
