--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,11 @@
       }
     </style>
   </head>
-  <body class="h-100 d-flex flex-column bg-dark text-light">
-    <nav class="navbar navbar-expand-lg bg-light">
+<!--  <div>-->
+<!--<img src="static/images/images.jpeg"></div>-->
+  <body class="h-100 d-flex flex-column"
+        style="background-color: #FADADD">
+    <nav class="navbar navbar-expand-lg bg-light; background-color: #695B5C;">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('home_page') }}">FemInstant</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,12 +43,11 @@
               <a class="nav-link" href="#">FemFamily</a>
             </li>
           </ul>
-          <form class="d-flex" method="post" action="#">
-            <a role="button" class="btn btn-outline-dark" href="#">Log in</a>
-            <a role="button" class="btn btn-outline-dark ms-2" href="#">Sign up</a>
-            <a role="button" class="btn btn-outline-dark" href="#">Profile</a>
-            <button type="submit" class="btn btn-outline-dark ms-2">Log out</button>
-          </form>
+
+              <form class="d-flex" method="post" action="#">
+              <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('login_page') }}">Log in</a>
+              <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('register') }}">Register</a>
+              </form>
         </div>
       </div>
     </nav>
@@ -65,5 +67,6 @@
     </div>
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
   </body>
 </html>
