--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,55 +1,57 @@
-
+{% extends "base.html" %}
 {% block title %}{% endblock %}
 {% block content %}
+<div class="container">
+  <form method="POST">
+    {{ form.hidden_tag() }}
+      <div class="mb-3">
+        {{ form.inputAddress1.label(class="form-label") }}
+        {% if form.inputAddress1.errors %}
+          {{ form.inputAddress1(class="form-control is-invalid") }}
+          {% for error in form.inputAddress1.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.inputAddress1(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.inputAddress2.label(class="form-label") }}
+        {% if form.inputAddress2.errors %}
+          {{ form.inputAddress2(class="form-control is-invalid") }}
+          {% for error in form.inputAddress2.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.inputAddress2(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.inputCity.label(class="form-label") }}
+        {% if form.inputCity.errors %}
+          {{ form.inputCity(class="form-control is-invalid") }}
+          {% for error in form.inputCity.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.inputCity(class="form-control") }}
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        {{ form.inputZip.label(class="form-label") }}
+        {% if form.inputZip.errors %}
+          {{ form.inputZip(class="form-control is-invalid") }}
+          {% for error in form.inputZip.errors %}
+            <span>{{ error }}</span>
+          {% endfor %}
+        {% else %}
+          {{ form.inputZip(class="form-control") }}
+        {% endif %}
 
-<form>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-    </div>
+      </div>
+      <div class="mt-4">
+        {{ form.submit(class='btn btn-light text-dark btn-primary') }}
+      </div>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/@geocodeearth/autocomplete-element/dist/bundle.js">
-    </script>
 {% endblock %}
