--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,156 @@
 {% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<!--<body style="background-color: #FADADD"></body>-->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleIndicators" data-bslide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bslide-to="1"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bslide-to="2"></li>
+    </ol>
+  <div class="carousel-inner">
+      <div class="carousel-item active"
+           style="height:36rem;
+                  background:#FADADD;
+                  text-shadow: 3px 3px 2px #787273;
+                  position: relative;
+                  left:100px;
+                  font-size: 3rem;
+                  background-position: center;
+                  background-size: cover;
+                  background-image: url(static/images/makeup.jpeg)">
+        <div class="container" style="position: absolute; bottom:0; left:0; right:0; padding-bottom:100px;">
+          <h1>Feminstant<span></span></h1>
+          <p>Feminine products in an Instant</p>
+          <a href="#" class ="btn btn-lg btn-primary">
+            Sign up today
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item active"
+           style="height:36rem;
+                  background:#FADADD;
+                  text-shadow: 3px 3px 2px #787273;
+                  position: relative;
+                  left:100px;
+                  font-size: 3rem;
+                  background-img: url(static/images/cerave.jpeg)">
+          <img class="d-block w-100; object-fit: fill" src="static/images/female-products.jpeg" alt="First slide">
+        <div class="container" style="position: absolute; bottom:0; left:0; right:0; padding-bottom:100px;">
+          <h1>Feminstant<span></span></h1>
+          <p>Feminine products in an Instant</p>
+          <a href="#" class ="btn btn-lg btn-primary">
+            Sign up today
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item"
+           style="height:36rem;
+                  background:#FADADD;
+                  text-shadow: 3px 3px 2px #787273;
+                  position: relative;
+                  left:100px;
+                  font-size: 3rem;">
+        <div class="container" style="position: absolute; bottom:0; left:0; right:0; padding-bottom:50px;">
+          <h1>Feminstant</h1>
+          <p>Feminine products in an Instant</p>
+          <a href="#" class ="btn btn-lg btn-primary">
+            Sign up today
+          </a>
+        </div>
+      </div>
+  </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-bslide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </a>
+
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-bslide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </a>
+</div>
+
+<!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
+<!--  <ol class="carousel-indicators">-->
+<!--    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+<!--    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+<!--    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+<!--  </ol>-->
+<!--  <div class="carousel-inner">-->
+<!--    <div class="carousel-item active">-->
+<!--      <img class="d-block w-100; object-fit: contain" src="static/images/cerave.jpeg" alt="First slide">-->
+<!--    </div>-->
+<!--    <div class="carousel-item">-->
+<!--      <img class="d-block w-100 object-fit: contain" src="static/images/makeup.jpeg" alt="Second slide">-->
+<!--    </div>-->
+<!--    <div class="carousel-item">-->
+<!--      <img class="d-block w-100 object-fit: contain" src="static/images/female-products.jpeg" alt="Third slide">-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+<!--    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--    <span class="sr-only">Previous</span>-->
+<!--  </a>-->
+<!--  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+<!--    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--    <span class="sr-only">Next</span>-->
+<!--  </a>-->
+<!--</div>-->
+
+
+<!--<section id="hero">-->
+<!--    <div class="hero container">-->
+<!--        <div style="color: #FADADD-->
+<!--        text-align: center;-->
+
+<!--        padding-top: 8em;-->
+<!--        font-size: 30px;-->
+<!--        font-family: sans-serif;">-->
+<!--            <h1 style="text-align: center;"> FemInstant <span></span></h1>-->
+<!--            <h3 style="text-align: center;">Feminine products in an instant <span></span></h3>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <div class ="button">-->
+<!--        <div style= "display: inline block;-->
+<!--        box-sizing: border-box;-->
+<!--        width: 40%;-->
+<!--        padding: 10px 30px;-->
+<!--        text-align: center;-->
+<!--        text-transform: uppercase;-->
+<!--        letter-spacing: .1rem;-->
+<!--        margin-left:auto;-->
+<!--        margin-right:auto;-->
+<!--        letter-spacing: .1rem;-->
+<!--        border: 2px solid #968284;-->
+<!--        margin-top: 30px;">-->
+<!--          <a href="{{(url_for('register'))}}" type="button" class="cta">Create Account</a>-->
+<!--        </div>-->
+<!--    </div>-->
+
+
+
+
+
+<!--        <div class ="button">-->
+<!--        <div style= "display: inline block;-->
+<!--        text-align: center;-->
+<!--        text-transform: uppercase;-->
+<!--        margin-left:auto;-->
+<!--        margin-right:auto;-->
+<!--        letter-spacing: .1rem;-->
+<!--        padding: 10px 30px;-->
+<!--        border: 2px solid #968284;-->
+<!--        letter-spacing: .1rem;-->
+<!--        width: 40%;-->
+<!--        margin-top: 30px;">-->
+<!--        <a href="#" type="button" class="cta">Shop</a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+{% endblock %}
