--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap">
     <style>
       * {
-        font-family: 'Inconsolata', monospace;
+        font-family: "Lucida Console", "Courier New", monospace;
       }
     </style>
   </head>
@@ -34,20 +34,26 @@
                 Products
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Beauty</a></li>
-                <li><a class="dropdown-item" href=#">Hygiene</a></li>
-                <li><a class="dropdown-item" href="#">Skincare</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('makeup_products_page') }}">Beauty</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('hygiene_products_page') }}">Hygiene</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('skincare_products_page') }}">Skincare</a></li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">FemFamily</a>
             </li>
           </ul>
-
+            {% if current_user.is_authenticated %}
               <form class="d-flex" method="post" action="#">
-              <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('login_page') }}">Log in</a>
-              <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('register') }}">Register</a>
+                <a role="button" class="btn btn-outline-dark ms-2" href="#">Welcome {{ current_user.name }}</a>
+                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('logout_page') }}">Logout</a>
               </form>
+            {% else %}
+              <form class="d-flex" method="post" action="#">
+                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('login_page') }}">Log in</a>
+                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('register') }}">Register</a>
+              </form>
+            {% endif %}
         </div>
       </div>
     </nav>
@@ -67,6 +73,5 @@
     </div>
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
   </body>
 </html>
