--- a/templates/hygiene.html
+++ b/templates/hygiene.html
@@ -6,7 +6,8 @@ PRODUCTS
 {% endblock %}
 
 {% block content %}
-    <table class="table table-hover table-light">
+    {% include 'includes/items_modals.html' %}
+    <table class="table table-hover table-light" style="margin-top: 20px;">
     <thead>
         <tr>
             <!-- Your Columns HERE -->
@@ -15,7 +16,6 @@ PRODUCTS
             <th scope="col">Inventory</th>
             <th scope="col">Price</th>
             <th scope="col">Description</th>
-
         </tr>
     </thead>
     <tbody>
@@ -29,6 +29,8 @@ PRODUCTS
                 <td>{{ item.description }}</td>
                 <td>
                     <button class="btn"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exampleModal-{{ items.id }}"
                             style="font-size: 1rem;
                                    text-transform: uppercase;
                                    background-color: pink;
