--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Pay{% endblock %}
+
+
+
 {% block content %}
+
+
+
 <section class="p-4 p-md-5">
   <div class="row d-flex justify-content-center">
     <div class="col-md-10 col-lg-8 col-xl-5">
@@ -76,4 +82,4 @@
     </div>
   </div>
 </section>
-{% endblock %}
+{% endblock content %}
