--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,33 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap">
+    <link rel="stylesheet" href="/static/bootstrap.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <style>
       * {
-        font-family: "Lucida Console", "Courier New", monospace;
+        font-family: "Ubuntu", monospace;
+      }
+      .background-container {
+        position: fixed;
+        top: 3rem;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: url('/static/images/makeup.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        opacity: 0.6;
+      }
+      .card {
+        background-color: rgba(var(--bs-light-rgb), 0.8);
       }
     </style>
   </head>
-
-  <body class="h-100 d-flex flex-column"
-        style="background-color: #FADADD">
-    <nav class="navbar navbar-expand-lg bg-light; background-color: #695B5C;">
+  <body class="h-100 d-flex flex-column bg-primary pt-5">
+    <nav class="navbar navbar-expand-lg fixed-top bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" style="font-size:2rem;" href="{{ url_for('home_page') }}">FemInstant</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,44 +48,32 @@
                 Products
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ url_for('makeup_products_page') }}">Beauty</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('hygiene_products_page') }}">Hygiene</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('skincare_products_page') }}">Skincare</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('products_page') }}">All Departments</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="{{ url_for('products_page', department='Skincare') }}">Skincare</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('products_page', department='Makeup') }}">Makeup</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('products_page', department='Feminine Hygiene') }}">Feminine Hygiene</a></li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" style="font-size:1.2rem;" href="#">FemFamily</a>
             </li>
           </ul>
-            {% if current_user.is_authenticated %}
-              <form class="d-flex" method="post" action="#">
-                <a role="button" class="btn btn-outline-dark ms-2" href="#">Welcome {{ current_user.name }}</a>
-                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('logout_page') }}">Logout</a>
-              </form>
-            {% else %}
-              <form class="d-flex" method="post" action="#">
-                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('login_page') }}">Log in</a>
-                <a role="button" class="btn btn-outline-dark ms-2" href="{{ url_for('register') }}">Register</a>
-              </form>
-            {% endif %}
+          <a role="button" class="btn btn-light ms-2" href="{{ url_for('basket_page') }}"><i class="fa-solid fa-basket-shopping me-1"></i> Basket ({{ basket_quantity }})</a>
+          {% if current_user.is_authenticated %}
+            <form class="d-flex" method="post" action="{{ url_for('logout_page') }}">
+              <button type="submit" class="btn btn-light ms-2">Logout</button>
+            </form>
+          {% else %}
+            <form class="d-flex" method="post" action="#">
+              <a role="button" class="btn btn-light ms-2" href="{{ url_for('login_page') }}">Log in</a>
+              <a role="button" class="btn btn-light ms-2" href="{{ url_for('register') }}">Register</a>
+            </form>
+          {% endif %}
         </div>
       </div>
     </nav>
-    <div class="container w-50">
-      {% with messages=get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-          {% for category, message in messages %}
-            <div class="alert alert-{{category}}">
-              <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              {{ message }}
-            </div>
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
-    </div>
     {% block content %}{% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="/static/bootstrap.js"></script>
   </body>
 </html>
