--- a/templates/login.html
+++ b/templates/login.html
@@ -1,34 +1,43 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+{% block title %}Login{% endblock %}
 {% block content %}
-<div class="container">
-  <form method="POST">
-    {{ form.hidden_tag() }}
-      <div class="mb-3">
-        {{ form.email.label(class="form-label") }}
-        {% if form.email.errors %}
-          {{ form.email(class="form-control is-invalid") }}
-          {% for error in form.email.errors %}
-            <span>{{ error }}</span>
-          {% endfor %}
-        {% else %}
-          {{ form.email(class="form-control") }}
-        {% endif %}
+  <div class="background-container"></div>
+  <div class="container mt-5" style="width: 576px; max-width: 90%; z-index: 5;">
+    {% include 'includes/flashed_messages.html' %}
+  </div>
+  <div class="container py-4">
+    <div class="card mx-auto border-0" style="max-width: 576px;">
+      <div class="card-body">
+        <form method="POST">
+          <h1 class="text-center">Log in</h1>
+          {{ form.hidden_tag() }}
+          <div class="mb-3">
+            {{ form.email.label(class="form-label") }}
+            {% if form.email.errors %}
+              {{ form.email(class="form-control is-invalid") }}
+              {% for error in form.email.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            {% else %}
+              {{ form.email(class="form-control") }}
+            {% endif %}
+          </div>
+          <div class="mb-3">
+            {{ form.password.label(class="form-label") }}
+            {% if form.password.errors %}
+              {{ form.password(class="form-control is-invalid") }}
+              {% for error in form.password.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            {% else %}
+              {{ form.password(class="form-control") }}
+            {% endif %}
+          </div>
+          <div class="mt-4">
+            {{ form.submit(class='btn btn-primary d-block mx-auto px-5') }}
+          </div>
+        </form>
       </div>
-      <div class="mb-3">
-        {{ form.password.label(class="form-label") }}
-        {% if form.password.errors %}
-          {{ form.password(class="form-control is-invalid") }}
-          {% for error in form.password.errors %}
-            <span>{{ error }}</span>
-          {% endfor %}
-        {% else %}
-          {{ form.password(class="form-control") }}
-        {% endif %}
-      </div>
-      <div class="mt-4">
-        {{ form.submit(class='btn btn-light text-dark btn-primary') }}
-      </div>
-    </form>
+    </div>
   </div>
 {% endblock %}
