--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <div class="container fixed-top" style="margin-top: 6rem; width: 576px; max-width: 90%; z-index: 5;">
     {% include 'includes/flashed_messages.html' %}
   </div>
-  <div id="productCarousel" class="h-100 carousel slide carousel-fade" data-bs-ride="carousel">
+  <div id="productCarousel" class="h-100 carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
     <ol class="carousel-indicators">
       <li data-bs-target="#productCarousel" data-bs-slide-to="0" class="active"></li>
       <li data-bs-target="#productCarousel" data-bs-slide-to="1"></li>
