--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" style="font-size:1.2rem;" href="#">About</a>
+              <a class="nav-link" style="font-size:1.2rem;" href="{{ url_for('about_page') }}">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" style="font-size:1.2rem;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
