--- a/templates/products.html
+++ b/templates/products.html
@@ -25,7 +25,7 @@
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{ item.name }}</h5>
                 <h6 class="card-subtitle mt-2">{{ item.description }}</h6>
-                <p class="card-text text-center mt-auto pt-2">You currently have X of these in your basket</p>
+                <p class="card-text text-center mt-auto pt-2">You currently have {{ basket.get(item.id|string) or 0 }} of these in your basket</p>
               </div>
               <form class="card-footer text-center" method="post" action="{{ url_for('increase_quantity_in_basket', item_id=item.id) }}">
                 <button type="submit" class="btn btn-primary" name="referrer" value="{{ url_for('products_page', department=department) }}">Add to basket</button>
